# backchat

./: .gitignore  README.md  config.py  config_fine10.py  config_trained_backup_tinystories.py  config_xcoax.py  dataset.py  finetune_xcoax.py  instruct_tune.py  main.py  paper_notes.md  preprocess.py  preprocess_chat.py  preprocess_fine10.py  preprocess_instruct.py  preprocess_xcoax.py  pyproject.toml  requirements.txt  sample.py  sample_xcoax.py  sample_xcoax_instruct.py  server.py  server_chat.py  server_fine.py  train.py  train.sh  train_chat.py  train_fine10.py  train_xcoax.py  xcoax_backchat.bib
static/: interface.js
templates/: interface.html  interface_nonlinear.html
utils/: archiver.py
